--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -1,5 +1,6 @@
 <div id="body">
 	<div class="bg"></div>
+
 	<section class="banner-contents  firstbgimg">
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
@@ -56,59 +57,82 @@
 					</div>
 				</div>
 				<div class="swiper-slide">
-						<div class="item col-md-12">
-							<h2 style="margin-bottom: 30px;font-size: 29px;"> One Small Step for Lambda, one Giant Leap for the Future </h2>
-							<h3 style="margin-bottom: 30px;font-size: 26px;">Information flow driven by finance</h3>
-							<p style="opacity:0.8;font-size:14px;text-align: left;width: 90%">
-									Know more about design principles of Lambda’s Economic System 
-							</p>
-							<a class="btn firstBtn" href="https://www.lambda.im/doc/Lambda-WhitePaper-en.pdf" target="_blank">Download Economic White Paper</a>
-							<div class="contact">
-								<ul>
-									<li>
-										<a href="https://t.me/HelloLambda" target="_blank">
-											<img alt="telegram" src="<%= require('../../img/index/telegram.png') %>" />
-										</a>
-									</li>
-									<li>
-										<a href="https://twitter.com/Lambdaim" target="_blank">
-											<img alt="twitter" src="<%= require('../../img/index/twitter.png') %>" />
-										</a>
-									</li>
-									<li class="wechatitem">
-										<a href="https://mp.weixin.qq.com/s/rW3pOxzJwI1HXrTESTYxWA" target="_blank">
-											<img alt="wechat" src="<%= require('../../img/index/wechat.png') %>" />
-										</a>
-										<img alt="weichhart lambda" style="width:100px" class="wechatQRcode" src="<%= require('../../img/index/wechartrq.jpg') %>"
-										/>
-									</li>
-									<li>
-										<a href="https://www.facebook.com/Lambdaim" target="_blank">
-											<img alt="facebook" src="<%= require('../../img/index/facebook.png') %>" />
-										</a>
-									</li>
-									<li>
-										<a href="https://www.linkedin.com/company/lambdaim" target="_blank">
-											<img alt="linkedin" src="<%= require('../../img/index/linkedin.png') %>" />
-										</a>
-									</li>
-									<li>
-										<a href="https://www.weibo.com/lambdaim?is_all=1" target="_blank">
-											<img alt="weibo" src="<%= require('../../img/index/weibo.png') %>" />
-										</a>
-									</li>
-	
-	
-								</ul>
-							</div>
+					<div class="item2 col-md-12">
+						<h2 style="margin-bottom: 30px;font-size: 29px;"> One Small Step for Lambda, </h2>
+						<h2 style="margin-bottom: 30px;font-size: 29px;">one Giant Leap for the Future</h2>
+						<h3 style="margin-bottom: 30px;font-size: 26px;">Information flow driven by finance</h3>
+						<p style="opacity:0.8;font-size:14px;text-align: left;width: 90%">
+							Know more about design principles of Lambda’s Economic System
+						</p>
+						<div class="logo-container">
+							<a href="">
+								<img src="<%= require('../../img/index/fimg2.png') %>" alt="lambda">
+							</a>
+						</div>
+						<a class="btn firstBtn" href="https://www.lambda.im/doc/Lambda-Economic-White-Paper.pdf" target="_blank">Economic WhitePaper</a>
+						<div class="contact">
+							<ul>
+								<li>
+									<a href="https://t.me/HelloLambda" target="_blank">
+										<img alt="telegram" src="<%= require('../../img/index/telegram.png') %>" />
+									</a>
+								</li>
+								<li>
+									<a href="https://twitter.com/Lambdaim" target="_blank">
+										<img alt="twitter" src="<%= require('../../img/index/twitter.png') %>" />
+									</a>
+								</li>
+								<li class="wechatitem">
+									<a href="https://mp.weixin.qq.com/s/rW3pOxzJwI1HXrTESTYxWA" target="_blank">
+										<img alt="wechat" src="<%= require('../../img/index/wechat.png') %>" />
+									</a>
+									<img alt="weichhart lambda" style="width:100px" class="wechatQRcode" src="<%= require('../../img/index/wechartrq.jpg') %>"
+									/>
+								</li>
+								<li>
+									<a href="https://www.facebook.com/Lambdaim" target="_blank">
+										<img alt="facebook" src="<%= require('../../img/index/facebook.png') %>" />
+									</a>
+								</li>
+								<li>
+									<a href="https://www.linkedin.com/company/lambdaim" target="_blank">
+										<img alt="linkedin" src="<%= require('../../img/index/linkedin.png') %>" />
+									</a>
+								</li>
+								<li>
+									<a href="https://www.weibo.com/lambdaim?is_all=1" target="_blank">
+										<img alt="weibo" src="<%= require('../../img/index/weibo.png') %>" />
+									</a>
+								</li>
+							</ul>
 						</div>
 					</div>
+				</div>
 			</div>
 			<div class="swiper-pagination">
 			</div>
 		</div>
+	</section>
+
+	<section id="demo" class="demo">
+		<div class="crowd col-md-12" style="text-align: left">
+			<h3 style="margin-bottom: 30px;font-size: 26px;    margin-top: 70px;">Lambda Provable Data Possession Demo</h3>
+			<p style="opacity:0.8;font-size:14px;text-align: left;    width: 90%">
+				We believe that all storage projects follow the core requirement of Provable Data Integrity. Also, it is crucial for data
+				projects to store data in an infeasible storage node and make them trusted and secure, in the academic world, there are
+				mainly two approaches which are Provable Data Possession (PDP) and Proofs of Retrievability (POR) depending on the usage
+				scenarios. Lambda has applied these two approaches in blockchain through academic research and engineering verification,
+				which has eliminated the core obstacles of decentralized storage.
+			</p>
+			<div class="col-xs-12">
+				<img width="50%" alt="demo pdp" src="<%= require('../../img/demo/pdp.jpg') %>" alt="">
+			</div>
+			<p style="opacity:0.8;font-size:14px;text-align: left;    width: 90%">
+				<a style="padding: 6px" class="btn sendBtn" href="https://github.com/LambdaIM/demo" target="_blank">Download Demo</a>
+			</p>
 		</div>
 	</section>
+
 	<section id="scene" class="scene use">
 		<div class="container">
 			<h1>APPLICATION SCENARIOS</h1>
@@ -188,9 +212,9 @@
 						analysis results of the data, and even the insights on the results of the data analysis.</p>
 				</div>
 			</div>
-
 		</div>
 	</section>
+
 	<section id="design" class="use design">
 		<div class="container">
 			<h1>ARCHITECTURE DESIGN</h1>
@@ -247,6 +271,7 @@
 			</div>
 		</div>
 	</section>
+
 	<section id="principle" class="use principle">
 		<div class="container">
 			<h1>WORKING PRINCIPLE</h1>
@@ -325,6 +350,7 @@
 			</div>
 		</div>
 	</section>
+
 	<section id="ecosystem" class="use ecosystem">
 		<div class="container">
 			<h1>ECOSYSTEM</h1>
@@ -344,6 +370,7 @@
 			</div>
 		</div>
 	</section>
+
 	<section id="tokensale" class="use tokensale">
 		<div class="container">
 			<h1>TOKEN DISTRIBUTION</h1>
@@ -505,6 +532,7 @@
 			</div>
 		</div>
 	</section>
+
 	<section id="team" class="use team">
 		<div class="container">
 			<h1>CORE TEAM</h1>
@@ -652,12 +680,17 @@
 			</div>
 		</div>
 	</section>
+
 	<section id="partners" class="use partners">
 		<div class="container">
 			<h1>Investor</h1>
 			<!-- <span>PARTNERS</span> -->
 			<div class="row partners-wrapper">
-
+				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+					<div class="partners-logo partners-logoyfy">
+						<img class="yfy" src="<%= require('../../img/partner/Bitman.png') %>" alt="Bitman">
+					</div>
+				</div>
 				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 					<div class="partners-logo partners-logoyfy">
 						<img class="yfy" src="<%= require('../../img/partner/1_zhenge.png') %>" alt="zhenge">
@@ -681,6 +714,12 @@
 				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 					<div class="partners-logo partners-logoyfy">
 						<img class="yfy" src="<%= require('../../img/partner/5_fanzheng.png') %>" alt="fanzheng">
+					</div>
+				</div>
+
+				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+					<div class="partners-logo partners-logoyfy">
+						<img class="yfy" src="<%= require('../../img/partner/FBG.png') %>" alt="FBG">
 					</div>
 				</div>
 
@@ -740,6 +779,12 @@
 
 				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 					<div class="partners-logo partners-logoyfy">
+						<img class="yfy" src="<%= require('../../img/partner/Genisis.png') %>" alt="Genisis">
+					</div>
+				</div>
+
+				<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+					<div class="partners-logo partners-logoyfy">
 						<img class="yfy" src="<%= require('../../img/partner/8.hongan.png') %>" alt="hongan">
 					</div>
 				</div>
@@ -789,6 +834,7 @@
 			</div>
 		</div>
 	</section>
+	
 	<div class="star-field">
 		<div class="layer"></div>
 		<div class="layer"></div>
