--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -58,7 +58,7 @@
 				</div>
 				<div class="swiper-slide">
 					<div class="item2 col-md-12">
-						<h2 style="margin-bottom: 30px;font-size: 29px;"> One Small Step for Lambda, </h2>
+						<h2 style="margin-bottom: 30px;font-size: 29px;"> One Small Step for Lambda</h2>
 						<h2 style="margin-bottom: 30px;font-size: 29px;">one Giant Leap for the Future</h2>
 						<h3 style="margin-bottom: 30px;font-size: 26px;">Information flow driven by finance</h3>
 						<p style="opacity:0.8;font-size:14px;text-align: left;width: 90%">
