下线白名单注册

--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -84,7 +84,7 @@
 								<li class="mao"><a href="javascript:;">ECOSYSTEM</a></li>
 								<li class="mao"><a href="javascript:;">TOKEN DISTRIBUTION</a></li>
 								<li class="mao"><a href="javascript:;">ROADMAP</a></li>
-								<li class="mao"><a href="https://token.lambda.im/#/register">REGISTER/SIGN UP</a></li
+								<li class="mao"><a href="https://token.lambda.im/#/register">REGISTER/SIGN UP</a></li>
 							<% } %>
 						</ul>
 					</div>
