--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -7,8 +7,8 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<div class="item col-md-12">
-							<h2 style="margin-bottom: 30px;font-size: 29px;"> A Disruptor in Blockchain-Based Storage Solution</h2>
-							<h3 style="margin-bottom: 30px;font-size: 26px;">Providing Unlimited Storage Capabilities</h3>
+							<h2 style="margin-bottom: 30px;font-size: 29px;"> <%=lang.section1.title1%></h2>
+							<h3 style="margin-bottom: 30px;font-size: 26px;"><%=lang.section1.title2%></h3>
 							<p style="opacity:0.8;font-size:14px;text-align: left;">
 								Lambda is a fast, safe, and scalable blockchain infrastructure project, which provides decentralized
 								applications (DAPPs)
