--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -31,7 +31,7 @@
 					<% } else if(pageId === 'indexEn'){ %>
 						<div class="nav-item mao">
 							<a href="#scene" >
-								APPLICATION SCENARIOS
+								<%=lang.head.menu1%>
 							</a>
 						</div>
 						<div class="nav-item mao" >
